# LMOS-config

./: .gitignore  export-schema.py  pyproject.toml  readme.md  schema.json  test.yml
.devcontainer/: devcontainer.json
.github/workflows/: schema_gen.yml
docs/: schema.json
example_configurations/: lmos-config-example.yaml
lmos-config/: __init__.py
lmos-config/ConfigTypes/: __init__.py
lmos_config/: __init__.py  _pre_config.py  runner_instance.py
lmos_config/ConfigLoader/: http_config.py  local_config.py  local_yaml.py
lmos_config/ConfigTypes/: __init__.py  auth.py  base.py  router.py
lmos_config/ConfigTypes/generic/: service.py
lmos_config/ConfigTypes/internal_services/: __init__.py  redis.py  relational_database.py
lmos_config/ConfigTypes/llm_runner/: __init__.py  aphrodite.py  exllama.py  sglang.py  vllm.py
lmos_config/ConfigTypes/rerank_runner/: __init__.py
lmos_config/ConfigTypes/stt_runner/: __init__.py  faster_whisper.py
lmos_config/ConfigTypes/tts_runner/: __init__.py
tests/: quick_test_http.py  quick_test_local.py
