[build-system]
requires = [
    "packaging",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lmos_config"]

[tool.setuptools]
packages = ["setuptools.find_packages"]

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "LMOS-config"
version = "0.1.0"
description = "Configuration management for LMOS."
requires-python = ">=3.8"
dependencies = [
    "pydantic >= 2.0",
]

[project.urls]
"Homepage" = "https://github.com/LMOS-IO/lmos-config"